# yazelix-yazi-assets

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  yazelix_starship.toml
config_metadata/: vendored_yazi_plugins.toml  yazi_assets_manifest.toml
config_templates/: yazelix_theme.toml
flavors/neon.yazi/: flavor.toml
plugins/lazygit.yazi/: main.lua
src/: lib.rs  starship.rs
