[package]
name = "yazelix_yazi_assets"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Reusable Yazi assets and deterministic config-pack renderer for Yazelix"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
